--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,13 +1,14 @@
 {
   "QUIZ_TITLE": "Quiz",
-  "Quiz_home":"Bienvenu sur MboaCulture",
+  "Quiz_home":"Bienvenu sur MboaCulture !",
   "Quiz_home_question":"prêt à le relever le défi?",
   "Quiz_home_indication":"Toucher 'Jouer' pour commencer",
-  "Quiz_home_comment":"COMMENT JOUER",
+  "Quiz_home_comment":"Comment jouer",
   "Quiz_home_regle1":"Comment jouer à MboaCulture",
+  "Quiz_home_regle11":"Bienvenue dans MboaCulture, l'application de quiz qui mettra à l'épreuve vos connaissances sur le Mboa ! Voici comment jouer :",
   "Quiz_home_regle2":"Commencer le jeu",
   "Quiz_home_regle21":"Appuyez sur le bouton 'Jouer' pour lancer un nouveau quiz.",
-  "Quiz_home_regle3":"Répondre aux questions",
+  "Quiz_home_regle3":"Répondre aux questions:",
   "Quiz_home_regle31":"Chaque quiz comprend une série de questions à choix multiples. Sélectionnez la réponse que vous pensez être correcte.",
   "Quiz_home_regle4":"Limite de temps",
   "Quiz_home_regle41":"Vous avez un temps limité pour répondre à chaque question. Soyez rapide pour marquer plus de points !",
@@ -16,7 +17,10 @@
   "Quiz_home_regle6":"Fin du jeu",
   "Quiz_home_regle61":"Le jeu se termine après la dernière question. Vous pouvez voir votre score final et tenter de le battre lors de votre prochaine partie !",
   "Quiz_home_regle":"Amusez-vous bien et bonnes découvertes sur MboaCulture !",
-  "QUESTION": "Question",
+  "Quiz_nbre_joueur1":"Jouer Seul",
+  "Quiz_nbre_joueurP":"plusieurs Joueurs",
+  "Quiz_propose_question":"Propose une question",
+  
   "OPTION": "Option",
   "NEXT_QUESTION": "Question suivante",
   "RESULTS": "Résultats",
