ajout de la fonctionalité ajout d'une question

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,8 +19,8 @@
   "Quiz_home_regle":"Enjoy your visit to MboaCulture!",
   "Quiz_nbre_joueur1":"Playing Alone",
   "Quiz_nbre_joueurP":"several Players",
-  "Quiz_propose_question":"plusieurs Joueurs",
-  
+  "Quiz_propose_question":"Ask  a question",
+
   "OPTION": "Option",
   "NEXT_QUESTION": "Question suivante",
   "RESULTS": "Results",
