--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,6 +1,6 @@
 {
   "QUIZ_TITLE": "Quiz",
-  "Quiz_home":"Bienvenu sur MboaCulture !",
+  "Quiz_home":"Bienvenue   sur   MboaCulture !",
   "Quiz_home_question":"prêt à le relever le défi?",
   "Quiz_home_indication":"Toucher 'Jouer' pour commencer",
   "Quiz_home_comment":"Comment jouer",
